# python-project-template

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
test/: test_sample.py
