[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.isort]
profile = 'black'

[tool.mypy]
python_version = "3.10"
files = "src/myproject,test"
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
