[metadata]
name = myproject
version = attr: myproject.__version__
description = Python project template
long_description = Python project template

[options]
zip_safe = False
package_dir=
    =src
packages=find:
scripts =
include_package_data = True
python_requires = >= 3.10

[options.packages.find]
where=src

[flake8]
max-line-length = 88
extend-ignore = E203
